--- a/styles/style.css
+++ b/styles/style.css
@@ -194,7 +194,7 @@ h1 {
 
 
 .topy{
-  color:white; 
+  color:black; 
   line-height: 80px; 
   margin-top: 20px; 
   text-align: center; 
@@ -203,7 +203,7 @@ h1 {
   font-weight: bolder;
 }
 .topys{
-  color:whitesmoke;
+  color:black;
    font-size: 20px;
     text-align: center;
     font-family: 'Josefin Slab', serif;
