--- a/styles/style.css
+++ b/styles/style.css
@@ -1,45 +1,54 @@
-    #title{
+    @import url('https://fonts.googleapis.com/css2?family=Akaya+Telivigala&family=Poppins:ital,wght@1,500&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Akaya+Telivigala&family=Poppins:ital,wght@1,500&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Akaya+Telivigala&family=Poppins:ital,wght@1,500&display=swap');
+    #title {
+        background-repeat: no-repeat;
+        background-size: 100% 100%;
+        height: 720px;
+    }
     
-      background-repeat: no-repeat;
-      background-size: 100% 100%;
-      height: 720px;
+    .t1 {
+        color: white;
+        font-family: 'Akaya Telivigala';
+        font-family: 'Poppins', sans-serif;
+        font-size: 30px;
     }
-    .nav-link{
-      font-family: 'Josefin Slab', serif;
-      
+    
+    .t2 {
+        color: rgb(221, 209, 153);
+        font-size: 18px;
+        font-family: 'Akaya Telivigala';
+        font-family: 'Poppins', sans-serif;
     }
-
+    
+    .nav-link {
+        font-family: 'Josefin Slab', serif;
+    }
+    
     h1 {
-
-      font-family: 'Josefin Slab', serif;
-
-      font-size: 3rem;
-
-      font-weight: 700;
-
-      line-height: 1.5;
-
+        font-family: 'Josefin Slab', serif;
+        font-size: 3rem;
+        font-weight: 700;
+        line-height: 1.5;
     }
-    .container-fluid{
+    
+    .container-fluid {
         padding: 3% 15%;
-        
     }
-
-
     /* .container-fluid{
         background-color:black;
         font-family: 'Montserrat', sans-serif; 
     } */
-    .navbar-brand{
-      font-family: 'Josefin Slab', serif;
-      font-weight: bolder;
-        
+    
+    .navbar-brand {
+        font-family: 'Josefin Slab', serif;
+        font-weight: bolder;
     }
-    .mnames{
-    font-family: 'Josefin Slab', serif;
-    text-align: center;
+    
+    .mnames {
+        font-family: 'Josefin Slab', serif;
+        text-align: center;
     }
-
     /* .dog{
         width:270px;
         transform:rotate(25deg);
@@ -47,198 +56,192 @@
         left: 70px;
         top: 120px;
     } */
-
-    .sites{
-      font-family: 'Josefin Slab', serif;
-      font-size: 1.5rem;
-      font-weight:bolder;
-      color:black ;
-      /* position: relative;
+    
+    .sites {
+        font-family: 'Josefin Slab', serif;
+        font-size: 1.5rem;
+        font-weight: bolder;
+        color: black;
+        /* position: relative;
       left: 30px; */
     }
-    .sites:hover{
-      color:rgb(255, 30, 63)  ;
-    text-decoration-line: none;
+    
+    .sites:hover {
+        color: rgb(255, 30, 63);
+        text-decoration-line: none;
     }
-
-    .content1{
-      font-weight:bold;
-      
+    
+    .content1 {
+        font-weight: bold;
     }
-      
-    .content2{
+    
+    .content2 {
         color: #8f8f8f;
-    padding-bottom:20px;
+        padding-bottom: 20px;
         /* position: relative;
       left: 20px; */
     }
-    .icon:hover{
-        color:green;
-
+    
+    .icon:hover {
+        color: green;
     }
-
-    #testimonials{
+    
+    #testimonials {
         padding: 5% 17%;
         text-align: center;
-        background-color:teal ;
+        background-color: teal;
         color: white;
     }
-    .testimonial-image{
+    
+    .testimonial-image {
         border-radius: 50%;
         width: 15rem;
         margin-bottom: 20px;
         margin-right: 40px;
         height: 250px;
     }
-
-    #press{
-      background-color:teal;
+    
+    #press {
+        background-color: teal;
         padding-bottom: 30px;
         position: relative;
         bottom: 60px;
-        
-        
-        
     }
-    .logo{
+    
+    .logo {
         width: 5rem;
         padding-bottom: 30px;
-        padding-top:40px;
-    /*     padding: 40px; */
+        padding-top: 40px;
+        /*     padding: 40px; */
         /* position: relative;
-        left: 30px; */ 
-        
-        
+        left: 30px; */
     }
-
-    .challenge{
+    
+    .challenge {
         background-color: white;
-      }
-        
-    .challenge2{
-          background-color:black;
-          text-align: center;
-          padding: 60px;
-      }
-        
-      
-
-    .content{
-      padding-top: 50px;
     }
-
-
-          #title{
-              text-align: center;
-              filter: blur(8px);
-          }
-
-
-
-    .truelove{
+    
+    .challenge2 {
+        background-color: black;
+        text-align: center;
+        padding: 60px;
+    }
+    
+    .content {
+        padding-top: 50px;
+    }
+    
+    #title {
+        text-align: center;
+    }
+    
+    .truelove {
         color: white;
         text-align: center;
         padding-bottom: 30px;
-      font-size: 1.8rem;
-      font-family: 'Josefin Slab', serif;
-      font-weight: bolder;
+        font-size: 1.8rem;
+        font-family: 'Josefin Slab', serif;
+        font-weight: bolder;
     }
-
-    #footer{
+    
+    #footer {
         background-color: white;
         text-align: center;
     }
-    .foot{
+    
+    .foot {
         padding: 10px;
         padding-top: 30px;
         padding-bottom: 30px;
     }
-
-    .soc{
-      width: 25px;
-      padding-right: 5px;
-      text-decoration-line: underline;
+    
+    .soc {
+        width: 25px;
+        padding-right: 5px;
+        text-decoration-line: underline;
     }
-    .footer{
-      font-size: 15px;
-      text-align: center;
-      padding-top: 50px;
-      height: 200px;
-
+    
+    .footer {
+        font-size: 15px;
+        text-align: center;
+        padding-top: 50px;
+        height: 200px;
     }
-    .copyright{
-      font-size: 10px;
-      font-weight: lighter;
-      text-align: center;
-      padding-left: 15px;
+    
+    .copyright {
+        font-size: 10px;
+        font-weight: lighter;
+        text-align: center;
+        padding-left: 15px;
     }
-    .below{
-      font-weight: lighter;
-      font-size: 10px;
+    
+    .below {
+        font-weight: lighter;
+        font-size: 10px;
     }
-
-    .sub{
-      font-size: 10px;
+    
+    .sub {
+        font-size: 10px;
     }
-
-    .course{
-      font-size: 15px;
-      font-weight: bold;
+    
+    .course {
+        font-size: 15px;
+        font-weight: bold;
     }
-
-    .courses{
-      font-size: 15px;
-      font-weight: bold;
-      font-family: 'Josefin Slab', serif;
-      margin-top: 0.5rem;
+    
+    .courses {
+        font-size: 15px;
+        font-weight: bold;
+        font-family: 'Josefin Slab', serif;
+        margin-top: 0.5rem;
     }
-
-
-    .topy{
-      color:black; 
-      line-height: 80px; 
-      margin-top: 20px; 
-      text-align: center; 
-      font-family: 'Josefin Slab', serif;
-      font-size: 40px;
-      font-weight: bolder;
+    
+    .topy {
+        color: black;
+        line-height: 80px;
+        margin-top: 20px;
+        text-align: center;
+        font-family: 'Josefin Slab', serif;
+        font-size: 40px;
+        font-weight: bolder;
     }
-    .topys{
-      color:black;
-      font-size: 22px;
+    
+    .topys {
+        color: black;
+        font-size: 22px;
         text-align: center;
         font-family: 'Josefin Slab', serif;
         font-weight: bolder;
     }
-
-    #pricing{
-      background-color:black;
-      padding-bottom: 80px;
-    }
-
-    .content3{
-      font-family: 'Josefin Slab', serif;
-      color: white;
-      padding-top: 30px;
-      padding-bottom: 30px;
-      font-weight: bolder;
-        
     
+    #pricing {
+        background-color: black;
+        padding-bottom: 80px;
     }
-    .line{
-      color: white;
-      height: 10px;
+    
+    .content3 {
+        font-family: 'Josefin Slab', serif;
+        color: white;
+        padding-top: 30px;
+        padding-bottom: 30px;
+        font-weight: bolder;
     }
-    .iitk{
-      width: 100%;
-      max-width: 80px;
-      height: auto;
-      margin-left: 20px;
+    
+    .line {
+        color: white;
+        height: 10px;
     }
-    .rsk{
-      width: 100%;
-      max-width: 80px;
-      height: auto;
-      margin-left: 10px;
+    
+    .iitk {
+        width: 100%;
+        max-width: 80px;
+        height: auto;
+        margin-left: 20px;
     }
-        
+    
+    .rsk {
+        width: 100%;
+        max-width: 80px;
+        height: auto;
+        margin-left: 10px;
+    }
