--- a/styles/style.css
+++ b/styles/style.css
@@ -194,7 +194,7 @@
 
 
     .topy{
-      color:black; 
+      color:white; 
       line-height: 80px; 
       margin-top: 20px; 
       text-align: center; 
@@ -203,7 +203,7 @@
       font-weight: bolder;
     }
     .topys{
-      color:black;
+      color:white;
       font-size: 22px;
         text-align: center;
         font-family: 'Josefin Slab', serif;
