--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,16 @@
       background-size: 100% 100%;
       height: 720px;
     }
+
+::-webkit-scrollbar {
+    width: 7px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgb(42, 236, 3);
+    border-radius: 10px;
+}
+
     .nav-link{
       font-family: 'Josefin Slab', serif;
       
